# snappy

./: BUILD.gn  snappy-stubs-public.h  snappy-test.h
gn-platform/win/: config.h
platform-include/mac/: config.h
