# ==================================================
# vars

config("snappy_config") {
  include_dirs = [ "." ]
}

static_library("snappy") {
  if (is_win) {
    cflags = [ "/wd4018" ]  # Signed/unsigned mismatch in comparison.
  }
  
  defines = [ "HAVE_CONFIG_H=1" ]

  sources = [
    "snappy-internal.h",
    "snappy-sinksource.cc",
    "snappy-sinksource.h",
    "snappy-stubs-internal.cc",
    "snappy-stubs-internal.h",
    "snappy.cc",
    "snappy.h",
  ]
  
  # local includes
  if (is_win) {
    sources += [ "platform-include/win/config.h" ]
    include_dirs = [ "platform-include/win" ]
  } else if (is_mac) {
    sources += [ "platform-include/mac/config.h" ]
    include_dirs = [ "platform-include/mac" ]
  } else {
    sources += [ "platform-include/linux/config.h" ]
    include_dirs = [ "platform-include/linux" ]
  }
  
  public_configs = [ ":snappy_config" ]
}

#executable("test_snappy") {
#  testonly = true
#  sources = [ "test_snappy.cpp" ]
#  deps = [
#    ":gtest_main",
#    ":snappy"
#  ]
#}

# TODO needs google-benchmark

#executable("test_snappy_unit") {
#  testonly = true
#  sources = [ "snappy_unittest.cc" ]
#  deps = [ ":snappy" ]
#}

#executable("test_snappy_gtest") {
#  testonly = true
#  sources = [ "snappy-test.cc" ]
#  deps = [
#    ":gtest_main",
#  ]
#}
